# babydjango

babystats/: MANIFEST.in  README.rst  admin.py  apps.py  models.py  setup.cfg  urls.py  views.py
babystats/migrations/: 0001_initial.py  0002_rename_actiontype_text_event_event_text.py  0003_auto_20211115_1713.py  0004_auto_20211115_1728.py  0005_auto_20211118_0544.py  0006_auto_20211118_0545.py  0007_auto_20211118_0546.py  0008_alter_event_shit.py  0009_auto_20211205_1818.py
babystats/static/babystats/: style.css
babystats/templates/babystats/: dashboard.html  detail.html  index.html  neu.html  running.html  running_bak.html  test.html
prod/: settings.py  urls.py
